PR c++/83937 - wrong C++17 handling of init-list ctor argument.

* call.c (build_special_member_call): Don't convert an init-list
	argument directly to the class type.

From-SVN: r258594